--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
@@ -8,29 +8,16 @@ footer:
       label: Logo
       preview:
         id: logo
-    menu_1:
+    footer_menu:
       type: pattern
       label: Menu
       preview:
         id: menu
         variant: footer
-    menu_2:
+    privacy_menu:
       type: pattern
       label: Menu
       preview:
         id: menu
-        variant: footer
-    menu_3:
-      type: pattern
-      label: Menu
-      preview:
-        id: menu
-        variant: footer
-    menu_4:
-      type: pattern
-      label: Menu
-      preview:
-        id: menu
-        variant: footer
-
+        variant: privacy
   visibility: storybook
