--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-tailwind",
-  "version": "1.1.5",
+  "version": "1.2.0-alpha.0",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "private": true,
@@ -42,25 +42,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.8.4",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
-    "@storybook/addons": "^6.4.9",
-    "@storybook/react": "^6.4.9",
-    "babel-loader": "^8.2.3",
-    "@babel/preset-env": "^7.8.4",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addons": "^6.4.9",
     "@storybook/linter-config": "^2.5.0",
+    "@storybook/react": "^6.4.9",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.1.5",
-    "@wingsuit-designsystem/core": "1.1.5",
-    "@wingsuit-designsystem/pattern": "1.1.5",
-    "@wingsuit-designsystem/preset-postcss8": "1.1.5",
-    "@wingsuit-designsystem/preset-tailwind2": "1.1.5",
-    "@wingsuit-designsystem/storybook": "1.1.5",
+    "@wingsuit-designsystem/cli": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/core": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/pattern": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/preset-postcss8": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/preset-tailwind2": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/storybook": "1.2.0-alpha.0",
     "autoprefixer": "^10.4.1",
+    "babel-loader": "^8.2.3",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
