--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-vanilla-scss",
-  "version": "1.1.5",
+  "version": "1.2.0-alpha.0",
   "description": "Vanilla Wingsuit Starter-Kit",
   "main": "",
   "license": "GPL-2.0",
@@ -44,11 +44,11 @@
     "@storybook/react": "^6.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.1.5",
-    "@wingsuit-designsystem/core": "1.1.5",
-    "@wingsuit-designsystem/pattern": "1.1.5",
-    "@wingsuit-designsystem/preset-scss": "1.1.5",
-    "@wingsuit-designsystem/storybook": "1.1.5",
+    "@wingsuit-designsystem/cli": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/core": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/pattern": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/preset-scss": "1.2.0-alpha.0",
+    "@wingsuit-designsystem/storybook": "1.2.0-alpha.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
