--- a/presets/pwa/package.json
+++ b/presets/pwa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-pwa",
-  "version": "1.2.0-1.2.0-alpha.3.0",
+  "version": "1.2.0-alpha.2",
   "description": "Wingsuit automatically generated favicons and progressive webapp enhancements preset.",
   "repository": {
     "type": "git",
