--- a/presets/tailwind2/package.json
+++ b/presets/tailwind2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-tailwind2",
-  "version": "1.2.0-1.2.0-alpha.3.0",
+  "version": "1.2.0-alpha.2",
   "description": "Wingsuit TailwindCSS 2 preset.",
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@wingsuit-designsystem/core": "1.2.0-1.2.0-alpha.3.0",
+    "@wingsuit-designsystem/core": "1.2.0-alpha.2",
     "fs-extra": "^9.0.0",
     "json-diff": "^0.7.1",
     "tailwindcss": "^2.0.1-compat"
