--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
@@ -1,17 +1,9 @@
 avatar:
   use: "@molecules/avatar/avatar.twig"
   label: Avatar
+  icon_path: ws-assets://images/avatar-icon.svg
   description: "An avatar represent a user, and displays the profile picture."
   fields:
-    image:
-      type: pattern
-      label: Image
-      description: The profile picture.
-      preview:
-        id: placeholder
-        variant: image
-        settings:
-          style: 1x1_xs_sc
     text:
       type: text
       label: Text
@@ -35,6 +27,15 @@ avatar:
           expanded: true
 
   settings:
+    image:
+      type: media_library
+      label: Image
+      description: The profile picture.
+      preview:
+        id: placeholder
+        variant: image
+        settings:
+          style: responsive_1_1_400w
     text_align:
       type: select
       label: Text align
@@ -49,10 +50,10 @@ avatar:
       description: Show
     horizontal:
       label: Horizontal
-      fields:
+      settings:
         image:
           id: placeholder
           variant: image
           settings:
-            style: 1x2_xs_sc
+            style: responsive_1_2_400w
 
