--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -1,6 +1,7 @@
 banner:
   use: "@molecules/banner/banner.twig"
   label: Banner
+  icon_path: ws-assets://images/banner-icon.svg
   description: Big image banner with text overlay.
   fields:
     image:
