--- a/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.wingsuit.yml
@@ -1,6 +1,7 @@
 button_group:
   use: "@molecules/button-group/button-group.twig"
   label: Button Group
+  icon_path: ws-assets://images/button_group-icon.svg
   description: A group of buttons
   fields:
     buttons:
