--- a/starter-kits/tailwind/source/default/patterns/01-atoms/image/image.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/image/image.wingsuit.yml
@@ -4,25 +4,33 @@ image:
   description: "Image with caption component."
   fields:
     image:
-      type: text
+      type: pattern
       label: The image.
-      description: The image provided by Drupal.
+      description: The image.
+      preview:
+        id: placeholder
+        variant: image
+        settings:
+          style: card
     caption:
       type: text
       label: The caption text.
   variants:
     image:
       label: Image
-      description: Use variant "image" for drupal images or theme images. Use ws-assets:// for theme images. E.g. "ws-assets://images/logo.svg"
+      description: Use variant "image" for drupal images or theme images. Use url with ws-assets:// for theme images. E.g. "ws-assets://images/logo.svg"
+      settings:
+        background_style: ''
     background:
       label: Background image
       description: Set the image url with setting "url" and control the display with setting "background_style"
+      settings:
+        url: 'ws-assets://images/logo.svg'
   settings:
     url:
       label: Url
       type: textfield
       description: Use "Url" if you don't have the rendered image tag. The component will generate an image tag.
-      preview: 'ws-assets://images/logo.svg'
     background_style:
       label: Background style
       description: Classes applied to background image container.
