fix (ci): Install python

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             - core-dependencies-v5-
       - run:
           name: Install Python
-          command: apt add python make g++
+          command: sudo apt-get install python
       - run:
           name: Install dependencies
           command: yarn install
