--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             - core-dependencies-v5-
       - run:
           name: Install Python
-          command: sudo apt-get install python
+          command: sudo apt-get install python3
       - run:
           name: Install dependencies
           command: yarn install
