--- a/docs/package.json
+++ b/docs/package.json
@@ -39,30 +39,23 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^6.1.0",
+    "@storybook/addon-links": "^6.4.0-beta.4",
+    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.1.0",
-    "@storybook/addons": "^6.1.0",
+    "@storybook/addon-viewport": "^6.4.0-beta.4",
+    "@storybook/addons": "^6.4.0-beta.4",
+    "@storybook/builder-webpack5": "^6.4.0-beta.4",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.1.0",
+    "@storybook/manager-webpack5": "^6.4.0-beta.4",
+    "@storybook/react": "^6.4.0-beta.4",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@webpack-cli/serve": "^1.3.0",
-    "@wingsuit-designsystem/cli": "1.1.3",
-    "@wingsuit-designsystem/core": "1.1.3",
-    "@wingsuit-designsystem/pattern": "1.1.3",
-    "@wingsuit-designsystem/pattern-react": "1.1.3",
-    "@wingsuit-designsystem/preset-compression": "1.1.3",
-    "@wingsuit-designsystem/preset-imagemin": "1.1.3",
-    "@wingsuit-designsystem/preset-mdx": "1.1.3",
-    "@wingsuit-designsystem/preset-pages": "1.1.3",
-    "@wingsuit-designsystem/preset-postcss8": "1.1.3",
-    "@wingsuit-designsystem/preset-pwa": "1.1.3",
-    "@wingsuit-designsystem/preset-tailwind2": "1.1.3",
-    "@wingsuit-designsystem/storybook": "1.1.3",
+    "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/preset-postcss8": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
     "autoprefixer": "^9.7.4",
-    "browser-sync-webpack-plugin": "^2.3.0",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
@@ -76,7 +69,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
     "lodash": "^4.17.20",
-    "postcss": "^8.2.10",
+    "postcss": "^8",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
@@ -84,8 +77,9 @@
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
     "storybook-addon-themes": "^6.0.1",
+    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^4.41.3",
+    "webpack": "^5.56.1",
     "yo": "^3.1.1"
   },
   "dependencies": {
