--- a/presets/pages/package.json
+++ b/presets/pages/package.json
@@ -43,6 +43,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "static-site-generator-webpack-plugin": "^3.4.2",
-    "yeoman-generator": "^5.3.0"
+    "yeoman-generator": "^5.3.0",
+    "webpack": "^5.56.1"
   }
 }
