--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -27,15 +27,15 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@wingsuit-designsystem/core": "1.1.3",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.0",
     "glob": "^7.1.6",
-    "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^4.2.0",
-    "resolve-url-loader": "^3.1.1",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^1.0.2"
+    "mini-css-extract-plugin": "^2.4.6",
+    "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-loader": "^5.3.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^2.0.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
