--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -42,18 +42,19 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^6.1.0",
+    "@storybook/addon-links": "^6.4.0-beta.4",
+    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.1.0",
-    "@storybook/addons": "^6.1.0",
+    "@storybook/addon-viewport": "^6.4.0-beta.4",
+    "@storybook/addons": "^6.4.0-beta.4",
+    "@storybook/builder-webpack5": "^6.4.0-beta.4",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.1.0",
+    "@storybook/manager-webpack5": "^6.4.0-beta.4",
+    "@storybook/react": "^6.4.0-beta.4",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-postcss8": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
@@ -79,8 +80,9 @@
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
     "storybook-addon-themes": "^6.0.1",
+    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^4.41.3",
+    "webpack": "^5.56.1",
     "yo": "^3.1.1"
   },
   "dependencies": {
