--- a/starter-kits/bootstrap/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
+++ b/starter-kits/bootstrap/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
@@ -16,10 +16,9 @@ placeholder:
     placeholder_url:
       label: Placeholder service
       type: select
-      preview: https://satyr.io/[width]x[height]
+      preview: https://via.placeholder.com/[width]x[height]
       required: true
       options:
-        "https://satyr.io/[width]x[height]": https://satyr.io/
         "https://via.placeholder.com/[width]x[height]": https://via.placeholder.com/
         "https://fakeimg.pl/[width]x[height]": https://fakeimg.pl/
         "https://placeimg.com/[width]/[height]/tech/grayscale": https://placeimg/
