--- a/starter-kits/vanilla-tailwind/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
+++ b/starter-kits/vanilla-tailwind/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
@@ -16,12 +16,11 @@ placeholder:
     placeholder_url:
       label: Placeholder service
       type: select
-      preview: https://satyr.io/[width]x[height]
+      preview: https://fakeimg.pl/[width]x[height]/
       required: true
       options:
-        "https://satyr.io/[width]x[height]": https://satyr.io/
         "https://via.placeholder.com/[width]x[height]": https://via.placeholder.com/
-        "https://fakeimg.pl/[width]x[height]": https://fakeimg.pl/
+        "https://fakeimg.pl/[width]x[height]/": https://fakeimg.pl/
         "https://placeimg.com/[width]/[height]/tech/grayscale": https://placeimg/
     background_classes:
       label: Classes
