--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -35,13 +35,14 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-backgrounds": "^6.0.0",
-    "@storybook/addon-links": "^6.0.0",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.0.0",
-    "@storybook/addons": "^6.0.0",
+    "@storybook/addons": "^6.4.9",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.0.0",
+    "@storybook/react": "^6.4.9",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.2.0-alpha.13",
@@ -49,7 +50,7 @@
     "@wingsuit-designsystem/pattern": "1.2.0-alpha.13",
     "@wingsuit-designsystem/preset-scss": "1.2.0-alpha.13",
     "@wingsuit-designsystem/storybook": "1.2.0-alpha.13",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^10.4.0",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
