--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-vanilla-tailwind",
-  "version": "1.2.0-alpha.14",
+  "version": "1.2.0",
   "description": "A design system with Storybook and Tailwind",
   "main": "",
   "private": true,
@@ -52,12 +52,12 @@
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.2.0-alpha.14",
-    "@wingsuit-designsystem/core": "1.2.0-alpha.14",
-    "@wingsuit-designsystem/pattern": "1.2.0-alpha.14",
-    "@wingsuit-designsystem/preset-postcss8": "1.2.0-alpha.14",
-    "@wingsuit-designsystem/preset-tailwind2": "1.2.0-alpha.14",
-    "@wingsuit-designsystem/storybook": "1.2.0-alpha.14",
+    "@wingsuit-designsystem/cli": "1.2.0",
+    "@wingsuit-designsystem/core": "1.2.0",
+    "@wingsuit-designsystem/pattern": "1.2.0",
+    "@wingsuit-designsystem/preset-postcss8": "1.2.0",
+    "@wingsuit-designsystem/preset-tailwind2": "1.2.0",
+    "@wingsuit-designsystem/storybook": "1.2.0",
     "autoprefixer": "^10.4.0",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
