--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
+    "babel-traverse": "^6.26.0",
+    "babylon": "^6.18.0",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "crypto-browserify": "^3.12.0",
@@ -72,7 +74,6 @@
     "svgo": "^2.7.0",
     "svgo-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.2.4",
-    "typescript": "^4.4.3",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0",
