--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -42,7 +42,7 @@
     "@storybook/theming": "^6.4.0-beta.4",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/core": "^2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
     "polished": "^4.0.5",
