--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "examples/*"
   ],
   "optionalDependencies": {
-    "verdaccio": "^5.5.2",
     "@cypress/skip-test": "^2.6.1",
     "@cypress/webpack-preprocessor": "^5.9.1",
     "cypress": "8.7.0",
     "ts-loader": "^8.0.14",
+    "verdaccio": "^5.5.2",
     "verdaccio-auth-memory": "^9.7.2"
   },
   "devDependencies": {
@@ -89,6 +89,7 @@
     "@types/enzyme": "^3.10.3",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "codecov": "^3.5.0",
@@ -135,6 +136,6 @@
     "wait-on": "^4.0.0"
   },
   "dependencies": {
-    "window-size": "^1.1.1"
+    " window-size": "^1.1.1"
   }
 }
