--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,17 +29,17 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/webpack": "^5.28.0",
-    "@wingsuit-designsystem/pattern": "1.1.3",
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
     "autoprefixer": "^10.3.7",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "babel-traverse": "^6.26.0",
     "babylon": "^6.18.0",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "drupal-attribute": "1.0.2",
     "external-svg-sprite-loader": "^7.2.0",
     "file-loader": "^6.2.0",
@@ -51,12 +51,11 @@
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.21",
     "merge-deep": "^3.0.3",
-    "mini-css-extract-plugin": "^2.3.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "path": "^0.12.7",
     "postcss": "^8.3.9",
-    "postcss-loader": "^6.1.1",
+    "postcss-loader": "^6.2.1",
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^6.7.0",
     "postcss-replace": "^1.1.3",
@@ -79,7 +78,8 @@
     "webpack-merge": "^5.8.0",
     "yaml": "^1.10.2",
     "yaml-loader": "^0.6.0",
-    "yargs": "^17.2.1"
+    "yargs": "^17.2.1",
+    "memory-fs": "^0.5.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
