--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -30,9 +30,9 @@
     "@wingsuit-designsystem/core": "1.2.1",
     "glob": "^7.1.6",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
+    "sass": "^1.50.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "^4.3.0",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^1.0.2"
