--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -26,15 +26,17 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.10.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/webpack": "^4.41.12",
-    "@wingsuit-designsystem/pattern": "1.2.3",
-    "@wingsuit-designsystem/storybook": "1.2.3",
-    "autoprefixer": "^9.7.4",
+    "@wingsuit-designsystem/pattern": "1.2.4",
+    "@wingsuit-designsystem/storybook": "1.2.4",
+    "autoprefixer": "10.4.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "7.3.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
     "drupal-attribute": "^1.0.2",
