feat: Replace drimage with easy responsive image

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -40,7 +40,7 @@ container:
     bg_image:
       type: media_library
       label: Background image
-      view_mode: drimage_background
+      view_mode: background
       group: tab_bg
       description: The background image
     tab_advanced:
