fix: Fix hero button configurtion

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -78,6 +78,7 @@ button:
       label: Url
       description: The action url of your button
       preview: 'https://github.com/wingsuit-designsystem/wingsuit'
+      expose_as_field: true
     icon:
       type: select
       label: Icon
