--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -16,7 +16,7 @@ hero:
       type: text
       label: Text
       preview: "Sub-hero message, not too long and not too short. Make it just right!"
-    button_group:
+    button:
       type: pattern
       label: Button
       preview:
