Initial commit to support storybook

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -1,4 +1,4 @@
-alert:
+alertxxx:
   use: "@atoms/alert/alert.twig"
   label: Alert
   description: Colorful status, warning and error messages for every situation.
