--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -31,15 +31,15 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@storybook/addon-controls": "^6.4.0-beta.4",
-    "@storybook/addon-docs": "^6.4.0-beta.4",
-    "@storybook/builder-webpack5": "^6.4.0-beta.4",
-    "@storybook/client-api": "^6.4.0-beta.4",
-    "@storybook/components": "^6.4.0-beta.4",
-    "@storybook/manager-webpack5": "^6.4.0-beta.4",
+    "@storybook/addon-controls": "^7.0.0-beta.31",
+    "@storybook/addon-docs": "^7.0.0-beta.31",
+    "@storybook/builder-webpack5": "^7.0.0-beta.31",
+    "@storybook/client-api": "^7.0.0-beta.31",
+    "@storybook/components": "^7.0.0-beta.31",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^6.4.0-beta.4",
-    "@storybook/theming": "^6.4.0-beta.4",
+    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/theming": "^7.0.0-beta.31",
     "@wingsuit-designsystem/core": "^2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
@@ -49,7 +49,7 @@
     "react-dom": "^16.13.1",
     "@types/react": "^16.9.14",
     "@types/react-dom": "^16.9.14",
-    "react-syntax-highlighter": "^15.3.1",
+    "react-syntax-highlighter": "^15.5.0",
     "webpack": "5"
   },
   "scripts": {
