--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -23,12 +23,10 @@
     "prototyping"
   ],
   "scripts": {
-    "dev:storybook": "cross-env-shell NODE_ENV=development \"start-storybook --config-dir apps/storybook\"",
-    "dev:storybook:docksal": "start-storybook --config-dir apps/storybook -p 3000",
-    "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
-    "docs:storybook": "build-storybook --docs --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "build-storybook --config-dir apps/storybook",
-    "deploy:storybook": "storybook-to-ghpages --existing-output-dir ./dist/app-storybook",
+    "dev:storybook": "cross-env-shell NODE_ENV=development \"storybook dev --config-dir apps/storybook\"",
+    "build:storybook": "build-storybook build --config-dir apps/storybook -o ./dist/app-storybook",
+    "docs:storybook": "storybook build --docs --config-dir apps/storybook -o ./dist/app-storybook",
+    "build-storybook": "storybook build --config-dir apps/storybook",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack  --config ./apps/drupal/webpack.config.js\"",
     "lint:js": "eslint --ext .js ./",
@@ -42,16 +40,16 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^6.4.0-beta.4",
+    "@storybook/addon-links": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.4.0-beta.4",
-    "@storybook/addons": "^6.4.0-beta.4",
-    "@storybook/builder-webpack5": "^6.4.0-beta.4",
+    "@storybook/addon-viewport": "^7.0.0-beta.31",
+    "@storybook/addons": "^7.0.0-beta.31",
+    "@storybook/builder-webpack5": "^7.0.0-beta.31",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/manager-webpack5": "^6.4.0-beta.4",
-    "@storybook/react": "^6.4.0-beta.4",
-    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/react-webpack5": "^7.0.0-alpha.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
