--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -42,15 +42,15 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^6.4.0-beta.4",
+    "@storybook/addon-links": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.4.0-beta.4",
-    "@storybook/addons": "^6.4.0-beta.4",
-    "@storybook/builder-webpack5": "^6.4.0-beta.4",
+    "@storybook/addon-viewport": "^7.0.0-beta.31",
+    "@storybook/addons": "^7.0.0-beta.31",
+    "@storybook/builder-webpack5": "^7.0.0-beta.31",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/manager-webpack5": "^6.4.0-beta.4",
-    "@storybook/react": "^6.4.0-beta.4",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/react": "^7.0.0-beta.31",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
