--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "bootstrap": "node ./scripts/bootstrap.js",
     "build": "node ./scripts/build-package.js",
     "lint": "yarn lint:js . && yarn lint:md .",
-    "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives packages starter-kits",
-    "fix:js": "cross-env NODE_ENV=production eslint --fix --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives",
+    "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs",
+    "fix:js": "cross-env NODE_ENV=production eslint --fix --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs",
     "lint:md": "remark -q",
     "fix:md": "remark . -o",
     "lerna": "lerna",
