--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -6,8 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
-  "main": "./index.js",
-  "module": "./index.js",
+  "main": "./dist/preset.js",
   "files": [
     "bin/**/*",
     "dist/**/*",
@@ -32,6 +31,7 @@
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
     "@storybook/addon-controls": "^7.0.0-beta.31",
+    "@storybook/csf-tools": "^7.0.0-beta.31",
     "@storybook/addon-docs": "^7.0.0-beta.31",
     "@storybook/builder-webpack5": "^7.0.0-beta.31",
     "@storybook/client-api": "^7.0.0-beta.31",
