--- a/presets/twing/package.json
+++ b/presets/twing/package.json
@@ -35,7 +35,9 @@
   "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
   "dependencies": {
     "@wingsuit-designsystem/core": "2.0.0-alpha.0",
-    "twing-loader": "^4.0.0"
-
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
+    "twing-loader": "^4.0.0",
+    "twing-drupal-filters": "^0.0.2",
+    "twing": "^5.1.0"
   }
 }
